# xmms-renascene

./: .dockerignore  .gitignore  .gitlab-ci.yml  AUTHORS  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  androidaudio.md  egui.md  eguiparity.md  exec.sh  meson.build  migrationplan.md  org.xmms.Renascene.yml  org.xmms.Resuscitated.yml  pytest.ini  refactoring.md  repo  rustportsummary.md  skins.md  uirefactoring.md  uiseparation.md  xmms.spec
.github/scripts/: run-android-ui-e2e.sh
.github/workflows/: flatpak-release.yml  unit-tests.yml
android/java/org/xmms/renascene/: XmmsActivity.java  XmmsAutoProbeActivity.java  XmmsPlaybackService.java  XmmsPlayerInfoWidget.java  XmmsPlayerWidget.java  XmmsWidgetSupport.java
android/res/layout/: widget_player.xml  widget_player_info.xml  widget_player_info_preview.xml  widget_player_preview.xml
android/res/values/: strings.xml
android/res/xml/: player_info_widget_info.xml  player_widget_info.xml
data/: org.xmms.Renascene.desktop  org.xmms.Renascene.metainfo.xml  org.xmms.Resuscitated.desktop  org.xmms.Resuscitated.metainfo.xml  org.xmms.XMMS.desktop  org.xmms.XMMS.metainfo.xml  xmms.1  xmms.gresource.xml
data/fonts/: README.md
e2e/: Dockerfile  README.md  android.py  conftest.py  control_socket.py  create_venv.py  docker-entrypoint.sh  gui.py  mpris.py  requirements.txt  test_android_helpers.py  test_android_ui.py  test_egui_button_events.py  test_egui_detached_playlist_interactions.py  test_egui_equalizer_visibility.py  test_gtk_coordinate_click.py  test_gtk_full_controls.py  test_gtk_socket_control.py  test_gui_playlist_resize.py  test_gui_zoom_clicks.py  test_mpris_dbus.py
rust/: Cargo.toml
rust-preview-screenshots/diffs/: main-identify.txt  validation-identify.txt
rust/src/: app_state.rs  config.rs  e2e.rs  lib.rs  main.rs  mpris.rs  player.rs  playlist.rs  podcast.rs  render.rs  session.rs  spotify.rs  ui.rs
rust/src/skin/: mod.rs  widget.rs  xpm.rs
rust/tests/: default_skin.rs  e2e.rs  render.rs
scripts/: check-egui-ui.sh  commandline.py  fire_lite.py  flatpak.py  repo.py
src/: app_state.rs  atomic_file.rs  audio_model.rs  config.rs  e2e.rs  equalizer.rs  equalizerwin.c  equalizerwin.h  lib.rs  main.c  main.rs  mpris.c  mpris.h  mpris.rs  outputwin.c  outputwin.h  player.c  player.h  player.rs  playlist.c  playlist.h  playlist.rs  playlistwin.c  playlistwin.h  podcast.c  podcast.h  podcast.rs  prefswin.c  prefswin.h  render.rs  session.rs  skin.c  skin.h  skineditor.rs  skinwin.c  skinwin.h  socket_control.rs  spotify.c  spotify.h  spotify.rs  (+8 more)
src/app/: command.rs  controller.rs  effect.rs  equalizer_actions.rs  file_info.rs  input.rs  logging.rs  mod.rs  panel.rs  playlist_actions.rs  preferences_model.rs  preview.rs  screenshot_scenarios.rs  services.rs  store.rs  view_model.rs
src/equalizer/: presets.rs
src/playback/: backend.rs  gstreamer.rs  mod.rs  model.rs  rodio.rs
src/render/: commands.rs  core.rs  docked.rs  equalizer.rs  main.rs  playlist.rs  surface.rs
src/skin/: edit.rs  layout.rs  mod.rs  widget.rs  xpm.rs
src/ui/: file_info.rs  style.rs
src/ui/egui/: android_events.rs  android_file_picker.rs  android_media.rs  android_runtime.rs  app.rs  effect_executor.rs  equalizer.rs  file_info.rs  input.rs  interaction.rs  layout.rs  main_player.rs  menu.rs  mod.rs  playback_runtime.rs  playlist.rs  preferences.rs  render_cache.rs  runtime.rs  screenshots.rs  skin_texture.rs  ui_state.rs
src/ui/egui/android/: activity.rs  audio_focus.rs  events.rs  jni.rs  layout.rs  media_session.rs  mod.rs  persistence.rs  picker.rs  playlist_manager.rs  widgets.rs
src/ui/gtk/: app.rs  dialogs.rs  equalizer_window.rs  file_info_dialog.rs  gestures.rs  main_menu.rs  main_window.rs  mod.rs  playlist_menu.rs  playlist_window.rs  preferences.rs  runtime.rs  skin_browser.rs  style.rs
tests/: android_widget_packaging.rs  android_widget_resume.rs  default_skin.rs  e2e.rs  egui_screenshots.rs  frontend_architecture.rs  render.rs
tests/common/: mod.rs
