[package]
name = "xmms-renascene-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[lib]
name = "xmms_renascene"
path = "src/lib.rs"

[[bin]]
name = "xmms-rs"
path = "src/main.rs"

[features]
default = ["gtk-ui", "gstreamer-backend"]
gtk-ui = ["dep:gtk"]
egui-ui = ["dep:egui", "dep:eframe", "dep:rfd"]
gstreamer-backend = ["dep:gstreamer", "dep:gstreamer-pbutils"]
mobile-ui = []

[dependencies]
bzip2 = "0.6.1"
cairo = { version = "0.22.0", package = "cairo-rs" }
flate2 = "1.1.9"
eframe = { version = "0.33", optional = true, default-features = true }
egui = { version = "0.33", optional = true }
gstreamer = { version = "0.24", optional = true }
gstreamer-pbutils = { version = "0.24", optional = true }
gtk = { version = "0.11.3", package = "gtk4", features = ["v4_6"], optional = true }
id3 = "1"
image = { version = "0.25.10", default-features = false, features = [
  "png",
  "bmp",
] }
image-extras = { version = "0.1.1", default-features = false, features = [
  "xpm",
] }
rfd = { version = "0.15", optional = true }
serde_json = "1"
sha2 = "0.10"
tar = "0.4.46"
ureq = "2"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
