[package]
name = "xmms-renascene-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[lib]
name = "xmms_renascene"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "xmms-rs"
path = "src/main.rs"

[features]
default = ["gtk-ui", "gstreamer-backend"]
gtk-ui = ["dep:gtk"]
egui-core = ["dep:egui", "dep:eframe"]
desktop-egui = [
  "dep:rfd",
  "dep:zbus",
  "eframe/accesskit",
  "eframe/wayland",
  "eframe/web_screen_reader",
  "eframe/wgpu",
  "eframe/x11",
]
egui-ui = ["egui-core", "desktop-egui"]
gstreamer-backend = ["dep:gstreamer", "dep:gstreamer-pbutils"]
rodio-backend = ["dep:cpal", "dep:rodio"]
mobile-ui = [
  "egui-core",
  "rodio-backend",
  "eframe/android-native-activity",
  "eframe/glow",
  "dep:jni",
  "dep:winit",
]

[dependencies]
bzip2 = "0.6.1"
fontdue = "0.9"
flate2 = "1.1.9"
eframe = { version = "0.35", optional = true, default-features = false, features = [
  "default_fonts",
] }
egui = { version = "0.35", optional = true }
cpal = { version = "0.17.3", optional = true }
gstreamer = { version = "0.25", optional = true }
gstreamer-pbutils = { version = "0.25", optional = true }
gtk = { version = "0.11.3", package = "gtk4", features = [
  "v4_6",
], optional = true }
id3 = "1"
image = { version = "0.25.10", default-features = false, features = [
  "png",
  "bmp",
] }
image-extras = { version = "0.1.1", default-features = false, features = [
  "xpm",
] }
jni = { version = "0.21.1", optional = true }
tiny-skia = "0.11"
rfd = { version = "0.17", optional = true }
rodio = { version = "0.22.2", optional = true, default-features = false, features = [
  "playback",
  "mp3",
  "mp4",
  "vorbis",
  "flac",
  "wav",
] }
serde_json = "1"
zbus = { version = "5.16", optional = true }
tar = "0.4.46"
winit = { version = "0.30.13", optional = true, default-features = false, features = [
  "android-native-activity",
] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[patch.crates-io]
winit = { git = "https://github.com/chrido/winit", branch = "fix-window-configchanged-android" }

[package.metadata.android]
package = "org.xmms.renascene"
apk_name = "xmms-renascene"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35

[[package.metadata.android.uses_permission]]
name = "android.permission.POST_NOTIFICATIONS"

[[package.metadata.android.uses_permission]]
name = "android.permission.FOREGROUND_SERVICE"

[[package.metadata.android.uses_permission]]
name = "android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK"

[[package.metadata.android.uses_permission]]
name = "android.permission.WAKE_LOCK"

[package.metadata.android.application]
label = "XMMS Renascene"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
has_code = true

[package.metadata.android.application.activity]
name = "org.xmms.renascene.XmmsActivity"
config_changes = "layoutDirection|locale|orientation|keyboardHidden|screenSize|smallestScreenSize|density|keyboard|navigation|screenLayout|uiMode"
exported = true
orientation = "sensor"
resizeable_activity = true
