[package]
name = "xmms-resuscitated-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[lib]
name = "xmms_resuscitated"
path = "src/lib.rs"

[[bin]]
name = "xmms-rs"
path = "src/main.rs"

[dependencies]
bzip2 = "0.6.1"
cairo = { version = "0.22.0", package = "cairo-rs" }
flate2 = "1.1.9"
gstreamer = "0.24"
gstreamer-pbutils = "0.24"
gtk = { version = "0.11.3", package = "gtk4", features = ["v4_6"] }
image = { version = "0.25.10", default-features = false, features = ["png", "bmp"] }
image-extras = { version = "0.1.1", default-features = false, features = ["xpm"] }
tar = "0.4.46"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
